Fix alignment and spacing on hero
Align to the container to match other components. Fix the right gutter issue
that causes scrolling on small screens.

--- a/_sass/module/_hero.scss
+++ b/_sass/module/_hero.scss
@@ -4,8 +4,13 @@ $scrim-color: rgba(0, 0, 0, .4);
 $hero-breakpoint: $grid--medium;
 
 .hero {
-  padding: ($spacing-base * 6) 0;
+  padding: 0;
   position: relative;
+
+  @include media($hero-breakpoint) {
+    // Extra padding on hero for larger screens to show more of the photo
+    padding: ($spacing-base * 6) 0;
+  }
 }
 
 .hero__attribution {
@@ -65,8 +70,6 @@ $hero-breakpoint: $grid--medium;
   @include grid-column(12);
   font-weight: 350;
   font-style: italic;
-  display: flex;
-  justify-content: center;
 }
 
 .hero__hed {
@@ -102,26 +105,17 @@ $hero-breakpoint: $grid--medium;
 }
 
 .hero__cta-container {
-  @include grid-collapse;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
 }
 
 .hero__cta-header {
-  @include grid-column(12);
 }
 
 .hero__cta {
-  @include grid-column(12);
-  margin-top: ($spacing-base * 2);
+  margin: ($spacing-base * 2) auto;
 
   @include grid-media($neat-grid--small) {
-    @include grid-column(6);
-  }
-
-  @include grid-media($neat-grid--medium) {
-    @include grid-column(4);
+    max-width: 20rem;
   }
 
   // Buttons should take full width of the column
